<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_24"
    android:gravity="center"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_32" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:padding="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_16"
        android:background="@color/white"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:padding="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_16"
        android:background="@color/white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_14"
        android:layout_marginBottom="@dimen/spacing_24" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="@dimen/text_size_18"
        android:padding="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_16"
        android:background="@color/primary"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_14" />

</LinearLayout>
