<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_24"
    android:gravity="center"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_32" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reset_email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_24"
        android:background="@color/white"
        android:textSize="@dimen/text_size_16" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_reset_link"
        android:textSize="@dimen/text_size_18"
        android:padding="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_16"
        android:background="@color/primary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="@dimen/text_size_18"
        android:padding="@dimen/spacing_16"
        android:background="@color/dark_gray"
        android:textColor="@color/white" />

</LinearLayout>
