<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_16" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_notifications"
        android:textSize="@dimen/text_size_16"
        android:gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:textSize="@dimen/text_size_16"
        android:padding="@dimen/spacing_12"
        android:background="@color/error"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/spacing_12" />

</LinearLayout>
