<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_24" />

    <androidx.cardview.widget.CardView xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_24"
        cardview:cardCornerRadius="@dimen/corner_radius_12"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16"
            android:background="@color/white">

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/spacing_8" />

            <TextView
                android:id="@+id/userEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user@email.com"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="@dimen/text_size_16"
        android:padding="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:background="@color/primary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/purchaseHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_history"
        android:textSize="@dimen/text_size_16"
        android:padding="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:background="@color/primary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_16"
        android:padding="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:background="@color/primary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="@dimen/text_size_16"
        android:padding="@dimen/spacing_12"
        android:background="@color/error"
        android:textColor="@color/white" />

</LinearLayout>
