<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_24" />

    <androidx.cardview.widget.CardView xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_24"
        cardview:cardCornerRadius="@dimen/corner_radius_12"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_plans"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/spacing_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_remaining"
                android:textSize="@dimen/text_size_14"
                android:layout_marginBottom="@dimen/spacing_8" />

            <TextView
                android:id="@+id/dataRemainingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 GB / 10 GB"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginBottom="@dimen/spacing_16" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:progress="50"
                android:layout_marginBottom="@dimen/spacing_12"
                style="?android:attr/progressBarStyleHorizontal" />

            <TextView
                android:id="@+id/daysLeftText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15 days left"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:spacing="@dimen/spacing_12">

        <Button
            android:id="@+id/buyPlanButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy_plan"
            android:textSize="@dimen/text_size_16"
            android:padding="@dimen/spacing_12"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/spacing_8" />

        <Button
            android:id="@+id/topUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/topup"
            android:textSize="@dimen/text_size_16"
            android:padding="@dimen/spacing_12"
            android:background="@color/secondary"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
